# cpu_monitor

./: LICENSE  README.md  cpu_monitor.py  pyproject.toml
